Archive2/84/5b8d9d6927cc11/output
+ clang++ -std=c++11 -O2 -Wall -Wextra -Werror -pedantic main.cpp -lm
main.cpp:5:21: error: variable 'weirdVariable' is uninitialized when used within its own initialization [-Werror,-Wuninitialized]
int weirdVariable = weirdVariable  + 1;
    ~~~~~~~~~~~~~   ^~~~~~~~~~~~~
1 error generated.
